@@ -7,6 +7,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -20,19 +21,19 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import tn.esprit.examen.nomPrenomClasseExamen.jwt.AuthTokenFilter;
 import tn.esprit.examen.nomPrenomClasseExamen.jwt.CustomAccessDeniedHandler;
 import tn.esprit.examen.nomPrenomClasseExamen.jwt.CustomAuthenticationSuccessHandler;
-import tn.esprit.examen.nomPrenomClasseExamen.services.SubscriberDetailsServiceImpl;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
 @AllArgsConstructor
 public class WebSecurityConfig {
 
     private final AuthTokenFilter authTokenFilter;
     private final CustomAccessDeniedHandler customAccessDeniedHandler;
     private final CustomAuthenticationSuccessHandler customAuthenticationSuccessHandler;
-    private final SubscriberDetailsServiceImpl userDetailsService;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -41,24 +42,52 @@ public class WebSecurityConfig {
                 .csrf(csrf -> csrf.disable())
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // Allow OPTIONS requests
+                        // Public Endpoints
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/protected/files/**").authenticated() // Protect file endpoints
                         .requestMatchers("/error").permitAll()
+
+                        // Testimonial media/images
+                        .requestMatchers("/api/testimonials/images/**").permitAll()
+                        .requestMatchers("/api/testimonials/media/**").permitAll()
+
+                        // Testimonial restricted endpoints
+                        .requestMatchers(HttpMethod.GET, "/api/testimonials/all").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/testimonials").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/testimonials/media").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/testimonials/{id}/like").authenticated()
+                        .requestMatchers(HttpMethod.DELETE, "/api/testimonials/{id}").authenticated()
+
+                        // Association and Donation
+                        .requestMatchers(HttpMethod.POST, "/api/associations/*/partners/*").hasAnyRole("ASSOCIATION_MEMBER", "ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/associations/*/partners").authenticated()
+                        .requestMatchers(HttpMethod.DELETE, "/api/associations/*/partners/*").hasAnyRole("ASSOCIATION_MEMBER", "ADMIN")
                         .requestMatchers(HttpMethod.PUT, "/api/associations/*/verify").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.POST, "/api/associations").permitAll()
+
+                        // Donations
+                        .requestMatchers(HttpMethod.GET,
+                                "/api/donations/**",
+                                "/api/donations/getall",
+                                "/api/donations/get/**",
+                                "/api/donations/find/{donationType}").permitAll()
+                        .requestMatchers(HttpMethod.POST,
+                                "/api/dons/**",
+                                "/api/paiments/create-payment-intent/**").permitAll()
+
+                        // Catch-all: authenticated required
                         .anyRequest().authenticated()
                 )
-                .addFilterBefore(authTokenFilter, UsernamePasswordAuthenticationFilter.class)
                 .exceptionHandling(exception -> exception
                         .authenticationEntryPoint((request, response, authException) -> {
                             response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized");
                         })
                         .accessDeniedHandler(customAccessDeniedHandler)
                 )
+                .addFilterBefore(authTokenFilter, UsernamePasswordAuthenticationFilter.class)
                 .build();
-
     }
+
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
@@ -69,18 +98,16 @@ public class WebSecurityConfig {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
-    // CORS Configuration
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(Arrays.asList("http://localhost:4200")); // Allow your frontend origin
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS","PATCH")); // Allow necessary methods
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept")); // Allow necessary headers
-        config.setAllowCredentials(true); // Allow credentials (e.g., cookies, authorization headers)
+        config.setAllowedOriginPatterns(List.of("http://localhost:4200"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
+        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config); // Apply to all endpoints
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
-
 }
